feat: campaign status
